fix(app): Fixed z-index

--- a/layout/Header/BurgerMenu/BurgerMenu.module.css
+++ b/layout/Header/BurgerMenu/BurgerMenu.module.css
@@ -5,7 +5,7 @@
 	right: 0;
 	height: 100vh;
 	padding: 25px 30px;
-	z-index: 101;
+	z-index: 10000;
 	border-radius: 15px 15px 0 0;
 	top: -100%;
 	background: var(--primary);
