--- a/page-component/SearchPage/SearchInput/SearchInput.module.css
+++ b/page-component/SearchPage/SearchInput/SearchInput.module.css
@@ -29,7 +29,7 @@
 	right: 20px;
 	top: 50%;
 	transform: translateY(-50%);
-	z-index: 100;
+	z-index: 1000;
 }
 
 .select > div {
